# particles

./: .gitignore  Makefile  ShellCheck.cabal  particles.cabal
src/: Main.hs  Particles.hs
test/: particles.hs
