Name:             particles
Version:          0.0.0
Cabal-Version:    1.12
build-type: Simple

library
    hs-source-dirs: src

executable particles
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:
    base >= 4 && < 5,
    text

test-suite test-particles
    type: exitcode-stdio-1.0
    build-depends:
      base >= 4 && < 5,
      particles,
      QuickCheck >= 2.7.4,
      hspec
    main-is: test/particles.hs
