Name:             particles
Version:          0.0.0
Cabal-Version:    1.12
build-type: Custom

library
    hs-source-dirs: src
    build-depends:
      base >= 4 && < 5,
      text
    exposed-modules:
      Particles

test-suite test-particles
    type: exitcode-stdio-1.0
    build-depends:
      base >= 4 && < 5,
      particles,
      QuickCheck >= 2.7.4,
      hspec
    main-is: test/particles.hs
